Частично готовы блоки с контеном в секции "Лучшее"

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>ProstoSite</title>
+    <title>Aeternum arts | Главная</title>
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -31,11 +31,11 @@
             <h2 class="section-title">Лучшее за неделю</h2>
             <div class="content-block photo-block">
                 <div class="description-bg">
-                    <span class="content-block-title">Лучшее фото</span>
+                    <div class="content-block-title">Лучшее фото</div>
                     <!--hidden-->
                     <div class="open-arrow-pic"></div>
-                    <span class="attentica-content-title">PHOTO TITLE</span>
-                    <span class="author-title">Author: <a href="#" class="username-title">Username</a></span>
+                    <div class="attentica-content-title">PHOTO TITLE</div>
+                    <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                     <div class="likes">
                         <div class="like-pic"></div>
                         <span class="like-counter">56</span>
@@ -48,11 +48,11 @@
             </div>
             <div class="content-block video-block">
                 <div class="description-bg">
-                    <span class="content-block-title">Лучшее видео</span>
+                    <div class="content-block-title">Лучшее видео</div>
                     <!--hidden-->
                     <div class="open-arrow-pic"></div>
-                    <span class="attentica-content-title">VIDEO TITLE</span>
-                    <span class="author-title">Author: <a href="#" class="username-title">Username</a></span>
+                    <div class="attentica-content-title">VIDEO TITLE</div>
+                    <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                     <div class="likes">
                         <div class="like-pic"></div>
                         <span class="like-counter">56</span>
@@ -64,13 +64,13 @@
                 </div>
             </div>
             <div class="content-block story-block">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <a href="#">...</a></p>
                 <div class="description-bg">
-                    <span class="content-block-title">Лучшая история</span>
+                    <div class="content-block-title">Лучшая история</div>
                     <!--hidden-->
                     <div class="open-arrow-pic"></div>
-                    <span class="attentica-content-title">STORY TITLE</span>
-                    <span class="author-title">Author: <a href="#" class="username-title">Username</a></span>
+                    <div class="attentica-content-title">STORY TITLE</div>
+                    <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                     <div class="likes">
                         <div class="like-pic"></div>
                         <span class="like-counter">56</span>
@@ -83,12 +83,12 @@
             </div>
             <div class="content-block music-block">
                 <div class="description-bg">
-                    <span class="content-block-title">Лучшая композиция</span>
+                    <div class="content-block-title">Лучшая композиция</div>
                     <!--hidden-->
                     <div class="open-arrow-pic"></div>
-                    <span class="attentica-content-title">MUSIC TITLE</span>
-                    <span class="music-author-title">Music author</span>
-                    <span class="author-title">Author: <a href="#" class="username-title">Username</a></span>
+                    <div class="attentica-content-title">MUSIC TITLE</div>
+                    <div class="music-author-title">Music author</div>
+                    <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                     <div class="likes">
                         <div class="like-pic"></div>
                         <span class="like-counter">56</span>
@@ -104,9 +104,9 @@
         <div class="big-photo-section">
             <div class="semicircle-shape">
                 <div class="square">
-                    <a href="#"><span class="author-title">AUTHOR NAME</span></a>
-                    <a href="#"><span class="section-title">section</span></a>
-                    <a href="#"><span class="subsection-title">subsection</span></a>
+                    <a href="#"><div class="author-title">AUTHOR NAME</div></a>
+                    <a href="#"><div class="section-title">section</div></a>
+                    <a href="#"><div class="subsection-title">subsection</div></a>
                 </div>
                 <div class="circle"></div>
             </div>
@@ -121,9 +121,9 @@
             <h2 class="section-title">Последнее</h2>
             <div class="semicircle-shape">
                 <div class="square">
-                    <a href="#"><span class="author-title">AUTHOR NAME</span></a>
-                    <a href="#"><span class="section-title">section</span></a>
-                    <a href="#"><span class="subsection-title">subsection</span></a>
+                    <a href="#"><div class="author-title">AUTHOR NAME</div></a>
+                    <a href="#"><div class="section-title">section</div></a>
+                    <a href="#"><div class="subsection-title">subsection</div></a>
                 </div>
                 <div class="circle"></div>
             </div>
@@ -132,11 +132,11 @@
                     <div class="album-pic"></div>
                     <div class="description-bg">
                         <div class="play-btn"></div>
-                        <span class="attentica-content-title">RADIOACTIVE</span>
-                        <span class="music-author-title">Imagine dragons</span>
+                        <div class="attentica-content-title">RADIOACTIVE</div>
+                        <div class="music-author-title">Imagine dragons</div>
                         <!--hidden-->
                         <div class="open-arrow-pic"></div>
-                        <span class="author-title">Author: <a href="#" class="username-title">Username</a></span>
+                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
                             <div class="like-pic"></div>
                             <span class="like-counter">56</span>
@@ -154,11 +154,11 @@
                     <div class="album-pic"></div>
                     <div class="description-bg">
                         <div class="play-btn"></div>
-                        <span class="attentica-content-title">PAPERCUT</span>
-                        <span class="music-author-title">Linkin Park</span>
+                        <div class="attentica-content-title">PAPERCUT</div>
+                        <div class="music-author-title">Linkin Park</div>
                         <!--hidden-->
                         <div class="open-arrow-pic"></div>
-                        <span class="author-title">Author: <a href="#" class="username-title">Username</a></span>
+                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
                             <div class="like-pic"></div>
                             <span class="like-counter">56</span>
@@ -174,11 +174,11 @@
             <div class="content-block small-block">
                 <div class="photo-box">
                     <div class="description-bg">
-                        <span class="content-block-title">Последнее фото</span>
+                        <div class="content-block-title">Последнее фото</div>
                         <!--hidden-->
                         <div class="open-arrow-pic"></div>
-                        <span class="attentica-content-title">PHOTO TITLE</span>
-                        <span class="author-title">Author: <a href="#" class="username-title">Username</a></span>
+                        <div class="attentica-content-title">PHOTO TITLE</div>
+                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
                             <div class="like-pic"></div>
                             <span class="like-counter">56</span>
@@ -194,11 +194,11 @@
             <div class="content-block small-block">
                 <div class="video-box">
                     <div class="description-bg">
-                        <span class="content-block-title">Последнее видео</span>
+                        <div class="content-block-title">Последнее видео</div>
                         <!--hidden-->
                         <div class="open-arrow-pic"></div>
-                        <span class="attentica-content-title">VIDEO TITLE</span>
-                        <span class="author-title">Author: <a href="#" class="username-title">Username</a></span>
+                        <div class="attentica-content-title">VIDEO TITLE</div>
+                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
                             <div class="like-pic"></div>
                             <span class="like-counter">56</span>
@@ -215,7 +215,7 @@
 
     <div class="footer">
             <div class="footer-logo"></div>
-            <span class="copyright">Copyright © PO-21 Top Team, 2016</span>
+            <div class="copyright">Copyright © PO-21 Top Team, 2016</div>
     </div>
 
 </body>
