--- a/index.html
+++ b/index.html
@@ -30,74 +30,96 @@
         <div class="best-section">
             <h2 class="section-title">Лучшее за неделю</h2>
             <div class="content-block photo-block">
-                <div class="description-bg">
-                    <div class="content-block-title">Лучшее фото</div>
-                    <!--hidden-->
-                    <div class="open-arrow-pic"></div>
-                    <div class="attentica-content-title">PHOTO TITLE</div>
-                    <div class="author">Author: <a href="#" class="username-title">Username</a></div>
-                    <div class="likes">
-                        <div class="like-pic"></div>
-                        <span class="like-counter">56</span>
+                <label>
+                    <input type="checkbox" class="condition-checkbox">
+                    <div class="description-bg">
+                        <div class="content-block-title">Лучшее фото</div>
+                        <div class="open-arrow-pic"></div>
+                        <!--hidden-->
+                        <div class="attentica-content-title">PHOTO TITLE</div>
+                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
+                        <div class="likes">
+                            <a href="#"><div class="like-pic"></div></a>
+                            <a href="#"><span class="like-counter">56</span></a>
+                        </div>
+                        <a href="#">
+                            <div class="more-info">
+                                <span class="more-link">Подробнее</span>
+                                <div class="more-pic"></div>
+                            </div>
+                        </a>
                     </div>
-                    <div class="more-info">
-                        <a href="#" class="more-link">Подробнее</a>
-                        <div class="more-pic"></div>
-                    </div>
-                </div>
+                </label>
             </div>
             <div class="content-block video-block">
-                <div class="description-bg">
-                    <div class="content-block-title">Лучшее видео</div>
-                    <!--hidden-->
-                    <div class="open-arrow-pic"></div>
-                    <div class="attentica-content-title">VIDEO TITLE</div>
-                    <div class="author">Author: <a href="#" class="username-title">Username</a></div>
-                    <div class="likes">
-                        <div class="like-pic"></div>
-                        <span class="like-counter">56</span>
+                <label>
+                    <input type="checkbox" class="condition-checkbox">
+                    <div class="description-bg">
+                        <div class="content-block-title">Лучшее видео</div>
+                        <!--hidden-->
+                        <div class="open-arrow-pic"></div>
+                        <div class="attentica-content-title">VIDEO TITLE</div>
+                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
+                        <div class="likes">
+                            <a href="#"><div class="like-pic"></div></a>
+                            <a href="#"><span class="like-counter">56</span></a>
+                        </div>
+                        <a href="#">
+                            <div class="more-info">
+                                <span class="more-link">Подробнее</span>
+                                <div class="more-pic"></div>
+                            </div>
+                        </a>
                     </div>
-                    <div class="more-info">
-                        <a href="#" class="more-link">Подробнее</a>
-                        <div class="more-pic"></div>
-                    </div>
-                </div>
+                </label>
             </div>
             <div class="content-block story-block">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <a href="#">...</a></p>
-                <div class="description-bg">
-                    <div class="content-block-title">Лучшая история</div>
-                    <!--hidden-->
-                    <div class="open-arrow-pic"></div>
-                    <div class="attentica-content-title">STORY TITLE</div>
-                    <div class="author">Author: <a href="#" class="username-title">Username</a></div>
-                    <div class="likes">
-                        <div class="like-pic"></div>
-                        <span class="like-counter">56</span>
+                <label>
+                    <input type="checkbox" class="condition-checkbox">
+                    <div class="description-bg">
+                        <div class="content-block-title">Лучшая история</div>
+                        <!--hidden-->
+                        <div class="open-arrow-pic"></div>
+                        <div class="attentica-content-title">STORY TITLE</div>
+                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
+                        <div class="likes">
+                            <a href="#"><div class="like-pic"></div></a>
+                            <a href="#"><span class="like-counter">56</span></a>
+                        </div>
+                        <a href="#">
+                            <div class="more-info">
+                                <span class="more-link">Подробнее</span>
+                                <div class="more-pic"></div>
+                            </div>
+                        </a>
                     </div>
-                    <div class="more-info">
-                        <a href="#" class="more-link">Подробнее</a>
-                        <div class="more-pic"></div>
-                    </div>
-                </div>
+                </label>
             </div>
             <div class="content-block music-block">
-                <div class="description-bg">
-                    <div class="content-block-title">Лучшая композиция</div>
-                    <!--hidden-->
-                    <div class="open-arrow-pic"></div>
-                    <div class="attentica-content-title">MUSIC TITLE</div>
-                    <div class="music-author-title">Music author</div>
-                    <div class="author">Author: <a href="#" class="username-title">Username</a></div>
-                    <div class="likes">
-                        <div class="like-pic"></div>
-                        <span class="like-counter">56</span>
+                <label>
+                    <input type="checkbox" class="condition-checkbox">
+                    <div class="description-bg">
+                        <div class="content-block-title">Лучшая композиция</div>
+                        <!--hidden-->
+                        <div class="open-arrow-pic"></div>
+                        <div class="attentica-content-title">MUSIC TITLE</div>
+                        <div class="music-author-title">Music author</div>
+                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
+                        <div class="likes">
+                            <a href="#">
+                                <div class="like-pic"></div>
+                            </a>
+                            <a href="#"><span class="like-counter">56</span></a>
+                        </div>
+                        <a href="#">
+                            <div class="more-info">
+                                <span class="more-link">Подробнее</span>
+                                <div class="more-pic"></div>
+                            </div>
+                        </a>
                     </div>
-                    <div class="more-info">
-                        <a href="#" class="more-link">Подробнее</a>
-                        <div class="more-pic"></div>
-                    </div>
-                </div>
+                </label>
             </div>
         </div>
 
@@ -138,13 +160,13 @@
                         <div class="open-arrow-pic"></div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
-                            <div class="like-pic"></div>
-                            <span class="like-counter">56</span>
+                            <a href="#"><div class="like-pic"></div></a>
+                            <a href="#"><span class="like-counter">56</span></a>
                         </div>
-                        <div class="more-info">
-                            <a href="#" class="more-link">Подробнее</a>
+                        <a href="#"><div class="more-info">
+                            <span class="more-link">Подробнее</span>
                             <div class="more-pic"></div>
-                        </div>
+                        </div></a>
                     </div>
                 </div>
             </div>
@@ -160,13 +182,13 @@
                         <div class="open-arrow-pic"></div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
-                            <div class="like-pic"></div>
-                            <span class="like-counter">56</span>
+                            <a href="#"><div class="like-pic"></div></a>
+                            <a href="#"><span class="like-counter">56</span></a>
                         </div>
-                        <div class="more-info">
-                            <a href="#" class="more-link">Подробнее</a>
+                        <a href="#"><div class="more-info">
+                            <span class="more-link">Подробнее</span>
                             <div class="more-pic"></div>
-                        </div>
+                        </div></a>
                     </div>
                 </div>
             </div>
@@ -180,13 +202,13 @@
                         <div class="attentica-content-title">PHOTO TITLE</div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
-                            <div class="like-pic"></div>
-                            <span class="like-counter">56</span>
+                            <a href="#"><div class="like-pic"></div></a>
+                            <a href="#"><span class="like-counter">56</span></a>
                         </div>
-                        <div class="more-info">
-                            <a href="#" class="more-link">Подробнее</a>
+                        <a href="#"><div class="more-info">
+                            <span class="more-link">Подробнее</span>
                             <div class="more-pic"></div>
-                        </div>
+                        </div></a>
                     </div>
                 </div>
             </div>
@@ -200,13 +222,13 @@
                         <div class="attentica-content-title">VIDEO TITLE</div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
-                            <div class="like-pic"></div>
-                            <span class="like-counter">56</span>
+                            <a href="#"><div class="like-pic"></div></a>
+                            <a href="#"><span class="like-counter">56</span></a>
                         </div>
-                        <div class="more-info">
-                            <a href="#" class="more-link">Подробнее</a>
+                        <a href="#"><div class="more-info">
+                            <span class="more-link">Подробнее</span>
                             <div class="more-pic"></div>
-                        </div>
+                        </div></a>
                     </div>
                 </div>
             </div>
