--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 </label>
             </div>
             <div class="content-block video-block">
+                <iframe width="220" height="138" src="https://www.youtube.com/embed/6uwEix1mAgk?rel=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
                 <label>
                     <input type="checkbox" class="condition-checkbox">
                     <div class="description-bg">
@@ -133,9 +134,11 @@
                 <div class="circle"></div>
             </div>
 
-            <div class="fotorama" data-width="800">
+            <div class="fotorama" data-width="700" data-swipe="false">
                 <img src="http://s.fotorama.io/1.jpg">
                 <img src="http://s.fotorama.io/2.jpg">
+                <img src="http://s.fotorama.io/3.jpg">
+                <img src="http://s.fotorama.io/4.jpg">
             </div>
         </div>
 
