Завершение верстки страницы index.html (без анимации и декоративных элементов)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Aeternum arts | Главная</title>
     <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="css/patterns.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
@@ -28,15 +29,15 @@
         </div>
 
         <div class="best-section">
-            <h2 class="section-title">Лучшее за неделю</h2>
-            <div class="content-block photo-block">
+            <h1 class="section-title">Лучшее за неделю</h1>
+            <div class="content-spoiler-block photo-spoiler-block">
                 <label>
                     <input type="checkbox" class="condition-checkbox">
                     <div class="description-bg">
-                        <div class="content-block-title">Лучшее фото</div>
+                        <div class="content-spoiler-block-title">Лучшее фото</div>
                         <div class="open-arrow-pic"></div>
                         <!--hidden-->
-                        <div class="attentica-content-title">PHOTO TITLE</div>
+                        <div class="attentica-content-title">Photo title</div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
                             <a href="#"><div class="like-pic"></div></a>
@@ -51,15 +52,15 @@
                     </div>
                 </label>
             </div>
-            <div class="content-block video-block">
+            <div class="content-spoiler-block video-spoiler-block">
                 <iframe width="220" height="138" src="https://www.youtube.com/embed/6uwEix1mAgk?rel=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
                 <label>
                     <input type="checkbox" class="condition-checkbox">
                     <div class="description-bg">
-                        <div class="content-block-title">Лучшее видео</div>
+                        <div class="content-spoiler-block-title">Лучшее видео</div>
                         <!--hidden-->
                         <div class="open-arrow-pic"></div>
-                        <div class="attentica-content-title">VIDEO TITLE</div>
+                        <div class="attentica-content-title">Video title</div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
                             <a href="#"><div class="like-pic"></div></a>
@@ -74,15 +75,15 @@
                     </div>
                 </label>
             </div>
-            <div class="content-block story-block">
+            <div class="content-spoiler-block story-spoiler-block">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <a href="#">...</a></p>
                 <label>
                     <input type="checkbox" class="condition-checkbox">
                     <div class="description-bg">
-                        <div class="content-block-title">Лучшая история</div>
+                        <div class="content-spoiler-block-title">Лучшая история</div>
                         <!--hidden-->
                         <div class="open-arrow-pic"></div>
-                        <div class="attentica-content-title">STORY TITLE</div>
+                        <div class="attentica-content-title">Story title</div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
                             <a href="#"><div class="like-pic"></div></a>
@@ -97,14 +98,14 @@
                     </div>
                 </label>
             </div>
-            <div class="content-block music-block">
+            <div class="content-spoiler-block music-spoiler-block">
                 <label>
                     <input type="checkbox" class="condition-checkbox">
                     <div class="description-bg">
-                        <div class="content-block-title">Лучшая композиция</div>
+                        <div class="content-spoiler-block-title">Лучшая композиция</div>
                         <!--hidden-->
                         <div class="open-arrow-pic"></div>
-                        <div class="attentica-content-title">MUSIC TITLE</div>
+                        <div class="attentica-content-title">Music title</div>
                         <div class="music-author-title">Music author</div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
@@ -125,11 +126,12 @@
         </div>
 
         <div class="big-photo-section">
+            <h1 class="section-title">Большой слайдер</h1>
             <div class="semicircle-shape">
                 <div class="square">
-                    <a href="#"><div class="author-title">AUTHOR NAME</div></a>
-                    <a href="#"><div class="section-title">section</div></a>
-                    <a href="#"><div class="subsection-title">subsection</div></a>
+                    <a href="#"><div class="author-name">AUTHOR NAME</div></a>
+                    <a href="#"><div class="section-name">section</div></a>
+                    <a href="#"><div class="subsection-name">subsection</div></a>
                 </div>
                 <div class="circle"></div>
             </div>
@@ -143,104 +145,123 @@
         </div>
 
         <div class="recently-section">
-            <h2 class="section-title">Последнее</h2>
+            <h1 class="section-title">Последнее</h1>
             <div class="semicircle-shape">
                 <div class="square">
-                    <a href="#"><div class="author-title">AUTHOR NAME</div></a>
-                    <a href="#"><div class="section-title">section</div></a>
-                    <a href="#"><div class="subsection-title">subsection</div></a>
+                    <a href="#"><div class="author-name">Author name</div></a>
+                    <a href="#"><div class="section-name">section</div></a>
+                    <a href="#"><div class="subsection-name">subsection</div></a>
                 </div>
                 <div class="circle"></div>
             </div>
-            <div class="content-block big-block">
-                <div class="music-box">
-                    <div class="album-pic"></div>
-                    <div class="description-bg">
-                        <div class="play-btn"></div>
-                        <div class="attentica-content-title">RADIOACTIVE</div>
-                        <div class="music-author-title">Imagine dragons</div>
-                        <!--hidden-->
-                        <div class="open-arrow-pic"></div>
+            <div class="center-wrapper clearfix">
+                <div class="big-shape">
+                    <div class="music-player-block">
+                        <div class="album-pic"></div>
+                        <div class="player-wrapper clearfix">
+                            <div class="play-btn"></div>
+                            <div class="attentica-content-title">Radioactive</div>
+                            <div class="music-author-title">Imagine dragons</div>
+                        </div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
-                            <a href="#"><div class="like-pic"></div></a>
+                            <a href="#">
+                                <div class="like-pic"></div>
+                            </a>
                             <a href="#"><span class="like-counter">56</span></a>
                         </div>
-                        <a href="#"><div class="more-info">
-                            <span class="more-link">Подробнее</span>
-                            <div class="more-pic"></div>
-                        </div></a>
+                        <a href="#">
+                            <div class="more-info">
+                                <span class="more-link">Подробнее</span>
+                                <div class="more-pic"></div>
+                            </div>
+                        </a>
                     </div>
                 </div>
-            </div>
 
-            <div class="content-block big-block">
-                <div class="music-box">
-                    <div class="album-pic"></div>
-                    <div class="description-bg">
-                        <div class="play-btn"></div>
-                        <div class="attentica-content-title">PAPERCUT</div>
-                        <div class="music-author-title">Linkin Park</div>
-                        <!--hidden-->
-                        <div class="open-arrow-pic"></div>
+                <div class="big-shape">
+                    <div class="music-player-block">
+                        <div class="album-pic"></div>
+                        <div class="player-wrapper clearfix">
+                            <div class="play-btn"></div>
+                            <div class="attentica-content-title">Papercut</div>
+                            <div class="music-author-title">Linkin park</div>
+                        </div>
                         <div class="author">Author: <a href="#" class="username-title">Username</a></div>
                         <div class="likes">
-                            <a href="#"><div class="like-pic"></div></a>
+                            <a href="#">
+                                <div class="like-pic"></div>
+                            </a>
                             <a href="#"><span class="like-counter">56</span></a>
                         </div>
-                        <a href="#"><div class="more-info">
-                            <span class="more-link">Подробнее</span>
-                            <div class="more-pic"></div>
-                        </div></a>
+                        <a href="#">
+                            <div class="more-info">
+                                <span class="more-link">Подробнее</span>
+                                <div class="more-pic"></div>
+                            </div>
+                        </a>
                     </div>
                 </div>
-            </div>
 
-            <div class="content-block small-block">
-                <div class="photo-box">
-                    <div class="description-bg">
-                        <div class="content-block-title">Последнее фото</div>
-                        <!--hidden-->
-                        <div class="open-arrow-pic"></div>
-                        <div class="attentica-content-title">PHOTO TITLE</div>
-                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
-                        <div class="likes">
-                            <a href="#"><div class="like-pic"></div></a>
-                            <a href="#"><span class="like-counter">56</span></a>
-                        </div>
-                        <a href="#"><div class="more-info">
-                            <span class="more-link">Подробнее</span>
-                            <div class="more-pic"></div>
-                        </div></a>
+                <div class="small-shape">
+                    <div class="content-spoiler-block photo-spoiler-block">
+                        <label>
+                            <input type="checkbox" class="condition-checkbox">
+                            <div class="description-bg">
+                                <div class="content-spoiler-block-title">Последнее фото</div>
+                                <!--hidden-->
+                                <div class="open-arrow-pic"></div>
+                                <div class="attentica-content-title">Photo title</div>
+                                <div class="author">Author: <a href="#" class="username-title">Username</a></div>
+                                <div class="likes">
+                                    <a href="#">
+                                        <div class="like-pic"></div>
+                                    </a>
+                                    <a href="#"><span class="like-counter">56</span></a>
+                                </div>
+                                <a href="#">
+                                    <div class="more-info">
+                                        <span class="more-link">Подробнее</span>
+                                        <div class="more-pic"></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </label>
                     </div>
                 </div>
-            </div>
 
-            <div class="content-block small-block">
-                <div class="video-box">
-                    <div class="description-bg">
-                        <div class="content-block-title">Последнее видео</div>
-                        <!--hidden-->
-                        <div class="open-arrow-pic"></div>
-                        <div class="attentica-content-title">VIDEO TITLE</div>
-                        <div class="author">Author: <a href="#" class="username-title">Username</a></div>
-                        <div class="likes">
-                            <a href="#"><div class="like-pic"></div></a>
-                            <a href="#"><span class="like-counter">56</span></a>
-                        </div>
-                        <a href="#"><div class="more-info">
-                            <span class="more-link">Подробнее</span>
-                            <div class="more-pic"></div>
-                        </div></a>
+                <div class="small-shape">
+                    <div class="content-spoiler-block video-spoiler-block">
+                        <iframe width="220" height="138" src="https://www.youtube.com/embed/gL3pDDrdALE?rel=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+                        <label>
+                            <input type="checkbox" class="condition-checkbox">
+                            <div class="description-bg">
+                                <div class="content-spoiler-block-title">Лучшее видео</div>
+                                <!--hidden-->
+                                <div class="open-arrow-pic"></div>
+                                <div class="attentica-content-title">Video title</div>
+                                <div class="author">Author: <a href="#" class="username-title">Username</a></div>
+                                <div class="likes">
+                                    <a href="#"><div class="like-pic"></div></a>
+                                    <a href="#"><span class="like-counter">56</span></a>
+                                </div>
+                                <a href="#">
+                                    <div class="more-info">
+                                        <span class="more-link">Подробнее</span>
+                                        <div class="more-pic"></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </label>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="footer">
-            <div class="footer-logo"></div>
-            <div class="copyright">Copyright © PO-21 Top Team, 2016</div>
+    <div class="footer clearfix">
+        <div class="footer-logo"></div>
+        <div class="copyright">Copyright © PO-21 Top Team, 2016</div>
     </div>
 
 </body>
