--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="css/patterns.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+    <script src="js/jquery-2.2.3.min.js"></script>
+    <!--setup fotorama-->
+    <link  href="css/fotorama.css" rel="stylesheet">
+    <script src="js/fotorama.js"></script>
 </head>
 
 <body>
@@ -145,7 +146,7 @@
         </div>
 
         <div class="recently-section">
-            <h1 class="section-title">Последнее</h1>
+            <h1 class="section-title">Последние добавленные</h1>
             <div class="semicircle-shape">
                 <div class="square">
                     <a href="#"><div class="author-name">Author name</div></a>
